SM-353 Database and URLs logic change for Device Settings Powertrain (#58)
* database change

* some ideas for getting device settings by powertrain only

* proto changes

* fixed linter

* tests pass for now

* updated device settings api to be name based

* update tests

* update logic on how to fetch device settings, update migrate, update seed, swag

* updated tests to pass per new requirements, removed empty settings test as this shouldnt happen

* add some todos for later

---------
