# docs/swagger.json
@@ -7,6 +7,105 @@
     },
     "basePath": "/v1",
     "paths": {
+        "/device-config/eth-addr/{ethAddr}/jobs": {
+            "get": {
+                "description": "Retrieve the jobs based on device's Ethereum Address.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "vehicle-signal-decoding"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Ethereum Address",
+                        "name": "ethAddr",
+                        "in": "path"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successfully retrieved jobs",
+                        "schema": {
+                            "$ref": "#/definitions/internal_controllers.JobResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "incorrect eth addr format"
+                    }
+                }
+            }
+        },
+        "/device-config/eth-addr/{ethAddr}/jobs/pending": {
+            "get": {
+                "description": "Retrieve the jobs based on device's Ethereum Address.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "vehicle-signal-decoding"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Ethereum Address",
+                        "name": "ethAddr",
+                        "in": "path"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successfully retrieved jobs",
+                        "schema": {
+                            "$ref": "#/definitions/internal_controllers.JobResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "incorrect eth addr format"
+                    }
+                }
+            }
+        },
+        "/device-config/eth-addr/{ethAddr}/jobs/{jobId}/{status}": {
+            "patch": {
+                "description": "Path job status based on device's Ethereum Address.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "vehicle-signal-decoding"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Ethereum Address",
+                        "name": "ethAddr",
+                        "in": "path"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Job ID",
+                        "name": "jobId",
+                        "in": "path"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successfully retrieved configuration URLs",
+                        "schema": {
+                            "$ref": "#/definitions/internal_controllers.DeviceConfigResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "incorrect eth addr format"
+                    },
+                    "404": {
+                        "description": "Not Found - No templates available for the given parameters"
+                    }
+                }
+            }
+        },
         "/device-config/eth-addr/{ethAddr}/urls": {
             "get": {
                 "description": "Retrieve the URLs for PID, DeviceSettings, and DBC configuration based on device's Ethereum Address. These could be empty if not configs available",
@@ -26,7 +125,7 @@
                     },
                     {
                         "type": "string",
-                        "description": "CAN Protocol",
+                        "description": "CAN Protocol, '6' or '7'",
                         "name": "protocol",
                         "in": "query"
                     }
@@ -66,7 +165,7 @@
                     },
                     {
                         "type": "string",
-                        "description": "CAN Protocol",
+                        "description": "CAN Protocol, '6' or '7'",
                         "name": "protocol",
                         "in": "query"
                     }
@@ -80,6 +179,37 @@
                     },
                     "404": {
                         "description": "Not Found - No templates available for the given parameters"
+                    }
+                }
+            }
+        },
+        "/device-config/{name}/device-settings": {
+            "get": {
+                "description": "Fetches the device settings configurations from device_settings table given a name. Note that device settings mostly only vary by powertrain and\nmay or may not be attached to a specific template.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "vehicle-signal-decoding"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "name",
+                        "name": "name",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successfully retrieved Device Settings",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_DIMO-Network_vehicle-signal-decoding_pkg_grpc.DeviceSetting"
+                        }
+                    },
+                    "404": {
+                        "description": "No Device Settings data found for the given name."
                     }
                 }
             }
@@ -111,37 +241,6 @@
                     },
                     "404": {
                         "description": "No DBC file found for the given template name."
-                    }
-                }
-            }
-        },
-        "/device-config/{templateName}/device-settings": {
-            "get": {
-                "description": "Fetches the device settings configurations from device_settings table given a template name",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "vehicle-signal-decoding"
-                ],
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "template name",
-                        "name": "templateName",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Successfully retrieved Device Settings",
-                        "schema": {
-                            "$ref": "#/definitions/github_com_DIMO-Network_vehicle-signal-decoding_pkg_grpc.DeviceSetting"
-                        }
-                    },
-                    "404": {
-                        "description": "No Device Settings data found for the given template name."
                     }
                 }
             }
@@ -182,29 +281,14 @@
         "github_com_DIMO-Network_vehicle-signal-decoding_pkg_grpc.DeviceSetting": {
             "type": "object",
             "properties": {
-                "battery_critical_level_voltage": {
-                    "type": "number"
+                "name": {
+                    "type": "string"
                 },
-                "safety_cut_out_voltage": {
-                    "type": "number"
-                },
-                "sleep_timer_event_driven_interval_secs": {
-                    "type": "number"
-                },
-                "sleep_timer_event_driven_period_secs": {
-                    "type": "number"
-                },
-                "sleep_timer_inactivity_after_sleep_secs": {
-                    "type": "number"
-                },
-                "sleep_timer_inactivity_fallback_interval_secs": {
-                    "type": "number"
+                "settings": {
+                    "$ref": "#/definitions/github_com_DIMO-Network_vehicle-signal-decoding_pkg_grpc.SettingsData"
                 },
                 "template_name": {
                     "type": "string"
-                },
-                "wake_trigger_voltage_level": {
-                    "type": "number"
                 }
             }
         },
@@ -251,6 +335,20 @@
                 }
             }
         },
+        "github_com_DIMO-Network_vehicle-signal-decoding_pkg_grpc.SettingsData": {
+            "type": "object",
+            "properties": {
+                "safety_cut_out_voltage": {
+                    "type": "number"
+                },
+                "sleep_timer_event_driven_period_secs": {
+                    "type": "number"
+                },
+                "wake_trigger_voltage_level": {
+                    "type": "number"
+                }
+            }
+        },
         "internal_controllers.DeviceConfigResponse": {
             "type": "object",
             "properties": {
@@ -264,6 +362,20 @@
                     "type": "string"
                 },
                 "version": {
+                    "type": "string"
+                }
+            }
+        },
+        "internal_controllers.JobResponse": {
+            "type": "object",
+            "properties": {
+                "command": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "status": {
                     "type": "string"
                 }
             }
